@@ -1,7 +1,7 @@
 #  File src/library/utils/R/sourceutils.R
 #  Part of the R package, http://www.R-project.org
 #
-#  Copyright (C) 1995-2013 The R Core Team
+#  Copyright (C) 1995-2014 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -19,7 +19,6 @@
 removeSource <- function(fn) {
     stopifnot(is.function(fn))
     if (is.primitive(fn)) return(fn)
-    attr(fn, "source") <- NULL
     attr(fn, "srcref") <- NULL
     attr(body(fn), "wholeSrcref") <- NULL
     attr(body(fn), "srcfile") <- NULL
